# faceted-domain-encoder

./: .gitignore  README.md  evaluate_ablation.sh  evaluate_aviation_ablation.sh  evaluate_medical_ablation.sh  evaluate_sampling.sh  evaluate_sampling_parameters.sh  evaluate_semantic_similarity.sh  pyproject.toml  samplig_evaluation.sh  sentence_similarity_evaluation.sh
config/: aviation_case_ablation_config.yaml  aviation_config.yaml  aviation_email_ablation_config.yaml  biosses_config.yaml  hallmarks_config.yaml  medicine_config.yaml  medsts_config.yaml  ohsumed_ablation_config.yaml  ohsumed_config.yaml
config/dataset/: aviation_case_ablation.yaml  aviation_email_ablation.yaml  aviation_email_classification.yaml  aviation_task_classification.yaml  biosses.yaml  hallmarks_classification.yaml  medsts.yaml  ohsumed.yaml  ohsumed_ablation.yaml  ohsumed_classification.yaml
config/encoder/: gru.yaml  lstm.yaml  transformer.yaml
config/graph/: aviation.yaml  mesh.yaml
config/hydra/: default.yaml
config/normalizer/: corpus.yaml  document.yaml  pass.yaml
config/pooling/: category_attention.yaml  max.yaml  mean.yaml  self_attention.yaml
config/word/: fasttext.yaml
demo/: index.py
experiments/: __init__.py
faceted_domain_encoder/: __init__.py  attention.py  criterion.py  data.py  domain2vec.py  encoder.py  graph2vec.py  model.py  normalization.py  pooling.py
notebooks/: ablation-visualization.ipynb  aviation-graph.ipynb  node2vec-training.ipynb  sts-visualization.ipynb
tests/: test_domain2vec.py  test_faceted_domain_encoder.py  test_graph2vec.py
(+42 files in other folders)
