[tool.poetry]
name = "faceted-domain-encoder"
version = "0.1.0"
description = ""
authors = ["Philipp Hager <philipp.hager@student.hpi.uni-potsdam.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
